Styled Apod page, added route for landing page, fixed z-index bug

--- a/frontend/src/style/NavStyle.css
+++ b/frontend/src/style/NavStyle.css
@@ -78,6 +78,7 @@ nav {
     gap: 1.5rem;
     background-color: var(--mainColor);
     transition: 1s;
+    z-index: 5;
   }
 
   header .responsive_nav {
